fixed menu dark mode

--- a/src/partials/_dark-mode.scss
+++ b/src/partials/_dark-mode.scss
@@ -12,7 +12,8 @@
   label,
   h2,
   h3,
-  li {
+  li,
+  span {
     color: #fff;
     text-decoration: none;
   }
